--- a/lex/templates/index.html
+++ b/lex/templates/index.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Brand</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='fonts/font-awesome.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/termynal.css') }}">
 </head>
 
 <body id="page-top">
@@ -35,10 +36,11 @@
         </div>
     </header>
     <div class="map-clean"></div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="{% url_for('static', filename='bootstrap/js/jquery.min.js' %}"></script>
+    <script src="{% url_for('static', filename='bootstrap/js/bootstrap.min.js' %}"></script>
+    <script src="{% url_for('static', filename='bootstrap/js/grayscale.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="assets/js/grayscale.js"></script>
+    <script src="{% url_for('static', filename='bootstrap/js/termynal.js' %}" data-termynal-container="#termynal"></script>
 </body>
 
 </html>
