--- a/lex/static/bootstrap/css/termynal.css
+++ b/lex/static/bootstrap/css/termynal.css
@@ -42,7 +42,7 @@
 }
 
 [data-termynal]:after {
-    content: 'bash';
+    content: 'Translated Python Code';
     position: absolute;
     color: var(--color-text-subtle);
     top: 5px;
