--- a/lex/templates/index.html
+++ b/lex/templates/index.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700">
     <link rel="stylesheet" href="{{ url_for('static', filename='fonts/font-awesome.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/termynal.css') }}">
+    <style>
+        .rectangle {
+          height: 50px;
+          width: 300px;
+          background-color: #555;
+        }
+        </style>
 </head>
 
 <body id="page-top">
@@ -18,8 +25,8 @@
                 aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item nav-link js-scroll-trigger" role="presentation"><a class="nav-link active js-scroll-trigger" href="#about" style="color: rgb(8,8,8);">LEX</a></li>
-                    <li class="nav-item nav-link js-scroll-trigger" role="presentation"><a class="nav-link js-scroll-trigger" href="#download" style="color: rgb(8,8,8);">Translated Code</a></li>
+                    <li class="nav-item nav-link js-scroll-trigger" role="presentation"><a class="nav-link active js-scroll-trigger" href="/lex" style="color: rgb(8,8,8);">LEX</a></li>
+                    <li class="nav-item nav-link js-scroll-trigger" role="presentation"><a class="nav-link js-scroll-trigger" href="/" style="color: rgb(8,8,8);">Translated Code</a></li>
                     <li class="nav-item nav-link js-scroll-trigger" role="presentation"></li>
                 </ul>
             </div>
@@ -29,18 +36,23 @@
         <div class="intro-body">
             <div class="container">
                 <div id="termynal" data-termynal>
-                    <span data-ty="input">pip install spaCy</span>
+                    <span data-ty="input">{{data}}</span>
                     <span data-ty>Successfully installed spacy</span>
+                </div>
+                <div class="rectangle">
+                    <p>
+                        time stamp
+                    </p>
                 </div>
             </div>
         </div>
     </header>
     <div class="map-clean"></div>
-    <script src="({url_for('static', filename='bootstrap/js/jquery.min.js'})"></script>
+    <script src="({url_for('static', filename='js/jquery.min.js'})"></script>
     <script src="{url_for('static', filename='bootstrap/js/bootstrap.min.js'}"></script>
-    <script src="{url_for('static', filename='bootstrap/js/grayscale.js'}"></script>
+    <script src="{url_for('static', filename='js/grayscale.js'}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="{url_for('static', filename='bootstrap/js/termynal.js'}" data-termynal-container="#termynal"></script>
+    <script src="{url_for('static', filename='js/termynal.js'}" data-termynal-container="#termynal"></script>
 </body>
 
 </html>
