--- a/lex/templates/index.html
+++ b/lex/templates/index.html
@@ -48,7 +48,8 @@
         </div>
     </header>
     <div class="map-clean"></div>
-    <script src="({url_for('static', filename='js/jquery.min.js'})"></script>
+    
+    <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
     <script src="{url_for('static', filename='bootstrap/js/bootstrap.min.js'}"></script>
     <script src="{url_for('static', filename='js/grayscale.js'}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
