--- a/gui/views/layouts/main.handlebars
+++ b/gui/views/layouts/main.handlebars
@@ -12,6 +12,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link rel="stylesheet" href="css/styles.css">
         <script src="js/bs-animation.js"></script>
+        <script src="js/dropdown-animation.js"></script>
     </head>
 </html>
 <body class="text-center">
