--- a/gui/views/layouts/main.handlebars
+++ b/gui/views/layouts/main.handlebars
@@ -13,6 +13,9 @@
         <link rel="stylesheet" href="css/styles.css">
         <script src="js/bs-animation.js"></script>
         <script src="js/dropdown-animation.js"></script>
+        <script src="js/script-preview.js"></script>
+        <script src="js/handlebars-v4.4.3.js"></script>
+
     </head>
 </html>
 <body class="text-center">
