fixes to POST request, minor overall improvements

--- a/gui/views/code.handlebars
+++ b/gui/views/code.handlebars
@@ -168,7 +168,7 @@
     <div>
 
         <script id="scriptTemplate" type="text/x-handlebars-template">
-            \{{#each commandos}}
+            \{{#each lmr}}
             <div class="border rounded shadow d-lg-flex justify-content-lg-end align-items-lg-center" style="width: 660px;background-color: rgb(225,223,230);border-radius: 1.8rem!important;height: 50px;padding-left: 25px;padding-right: 20px;margin-bottom: 10px;">
                 <label class="text-monospace d-lg-flex align-items-lg-center" style="min-width: 500px;margin-right: 30px;margin-top: 7px;"> \{{this}}</label>
                 <button class="btn btn-primary d-lg-flex" data-bs-hover-animate="pulse" id="delete" data-delete=\{{this}} type="button" style="background-color: #C95546;border-color: #C95546;">Delete</button>
