displaying translated code

--- a/lex/templates/index.html
+++ b/lex/templates/index.html
@@ -37,11 +37,11 @@
             <div class="container">
                 <div id="termynal" data-termynal>
                     <span data-ty="input">{{data}}</span>
-                    <span data-ty>Successfully installed spacy</span>
+                    <span data-ty>Successfully translated LRM</span>
                 </div>
                 <div class="rectangle">
                     <p>
-                        time stamp
+                        {{time}}
                     </p>
                 </div>
             </div>
